// Vitest Snapshot v1

exports[`addColumn > "ALTER TABLE \\"my_table\\" ADD new_name TEXT;" 1`] = `
[
  "ALTER TABLE \\"my_table.db\\" ADD new_name TEXT;",
  [],
]
`;

exports[`base methods > deleteAll 1`] = `
[
  "DELETE FROM \\"my_table.db\\" WHERE 1=?",
  [
    1,
  ],
]
`;

exports[`base methods > deleteById 1`] = `
[
  "DELETE FROM \\"my_table.db\\" WHERE id=?",
  [
    1,
  ],
]
`;

exports[`base methods > deleteTable 1`] = `
[
  "DROP TABLE IF EXISTS \\"hello.db\\"",
  [],
]
`;

exports[`base methods > findById 1`] = `
[
  "SELECT * FROM \\"my_table.db\\" WHERE id=?",
  [
    1,
  ],
]
`;

exports[`base methods > selectAll 1`] = `
[
  "SELECT * FROM \\"my_table.db\\"",
  [],
]
`;

exports[`create sql > "CREATE TABLE IF NOT EXISTS \\"test.db\\" (id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, age INTEGER NOT NULL, height FLOAT, weight FLOAT);" 1`] = `
[
  "CREATE TABLE IF NOT EXISTS \\"test.db\\" (id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL, age INTEGER NOT NULL, height FLOAT, weight FLOAT);",
  [],
]
`;

exports[`insert 1`] = `
[
  "INSERT or REPLACE INTO \\"my_table.db\\" (name, age, gex, isFlag) VALUES (?, ?, ?, ?)",
  [
    "张三",
    18,
    "男",
    true,
  ],
]
`;

exports[`inserts 1`] = `
[
  [
    "INSERT or REPLACE INTO \\"my_table.db\\" (name, age, gex) VALUES (?, ?, ?), (?, ?, ?)",
    [
      "张三",
      18,
      "男",
      "李四",
      16,
      "男",
    ],
  ],
  [
    "INSERT or REPLACE INTO \\"my_table.db\\" (name, age, gex) VALUES (?, ?, ?), (?, ?, ?)",
    [
      "王五",
      18,
      "女",
      "小明",
      30,
      "男",
    ],
  ],
  [
    "INSERT or REPLACE INTO \\"my_table.db\\" (name, age, gex) VALUES (?, ?, ?)",
    [
      "小张",
      22,
      "男",
    ],
  ],
]
`;

exports[`select 1`] = `
[
  "SELECT * FROM \\"my_table.db\\" WHERE name=? AND age!=? OR name IN (?, ?, ?) OR gex IS NOT ? LIMIT ?",
  [
    "张三",
    "18",
    "张三",
    "李四",
    "王五",
    "男",
    5,
  ],
]
`;

exports[`select 2`] = `
[
  "SELECT name,age FROM \\"test.db\\" WHERE name>\\"张三\\" OR gex=\\"男\\" AND ( ids IN 1 AND ids IN 2 AND ids IN 3 ) AND uuids IN (1, 2, 3) GROUP BY name ORDER BY DESC name,age LIMIT 10,15",
  [],
]
`;

exports[`select 3`] = `
[
  "SELECT * FROM \\"my_table.db\\" WHERE name IN (?, ?, ?) OR age=?",
  [
    1,
    2,
    "hello",
    18,
  ],
]
`;

exports[`select 4`] = `
[
  "SELECT * FROM \\"my_table.db\\" WHERE ( name=? AND name=? AND name=? ) OR age=? AND gex IN (?, ?, ?) AND ( gex!=? AND gex!=? AND gex!=false )",
  [
    1,
    2,
    "hello",
    18,
    1,
    2,
    3,
    1,
    "2",
  ],
]
`;

exports[`select 5`] = `
[
  "SELECT count(id) FROM \\"my_table.db\\" WHERE age>? AND gex=? GROUP BY ?",
  [
    18,
    "男",
    "name",
  ],
]
`;

exports[`setVersion 1`] = `
[
  "PRAGMA user_version = 2",
  [],
]
`;

exports[`setVersion 2`] = `
[
  "PRAGMA user_version = ?",
  [
    2,
  ],
]
`;

exports[`tableInfo 1`] = `
[
  "SELECT * FROM \\"sqlite_master\\" WHERE type=? AND name=?",
  [
    "table",
    "my_table.db",
  ],
]
`;

exports[`update 1`] = `
[
  "UPDATE \\"my_table.db\\" SET name=?, age=?, gex=? WHERE id=?",
  [
    1,
    "张三",
    18,
    "男",
  ],
]
`;

exports[`updateByWhen 1`] = `
[
  [
    "UPDATE \\"my_table.db\\" SET name = CASE WHEN name=? THEN ? WHEN name=? THEN ? END, age = CASE WHEN age=? THEN ? WHEN age=? THEN ? END",
    [
      "张三",
      "张三-18-男",
      "李四",
      "李四-16-男",
      18,
      180,
      16,
      160,
    ],
  ],
  [
    "UPDATE \\"my_table.db\\" SET name = CASE WHEN name=? THEN ? WHEN name=? THEN ? END, age = CASE WHEN age=? THEN ? WHEN age=? THEN ? END",
    [
      "王五",
      "王五-18-女",
      "小明",
      "小明-30-男",
      18,
      180,
      30,
      300,
    ],
  ],
  [
    "UPDATE \\"my_table.db\\" SET name = CASE WHEN name=? THEN ? END, age = CASE WHEN age=? THEN ? END",
    [
      "小张",
      "小张-22-男",
      22,
      220,
    ],
  ],
]
`;
